--- a/_posts/2021/2021-01-29-start.md
+++ b/_posts/2021/2021-01-29-start.md
@@ -1,8 +1,7 @@
 ---
 layout: post
-title:  "Let's have a try!"
+title:  "Let's open mind!"
 date:   2021-01-29 00:33:00 +0800
 categories: test
 ---
-做得晚总好过不做  
-就从这里开始吧 =)
+把经验开源，希望能有所帮助。
