双显输出可以啦

--- a/_posts/2022/2022-01-28-mac-m1.md
+++ b/_posts/2022/2022-01-28-mac-m1.md
@@ -13,8 +13,13 @@ tags: mac m1 node
 Outlook的搜索功能不能用，一直没搞定……
 
 ## 外接显示器
-在1080p的显示器上，效果很差，字体模糊，而且不用努力找软件方案了，无解。只有4k显示器才能根本解决问题。  
-双显输出方面，很不幸，即使是千元价位的雷电扩展坞，也不能同时支持双显独立输出。目前我是另外接了根HDMI解决。
+在1080p的显示器上，效果很差，字体模糊，而且不用努力找软件方案了，因为软件无解。只有换4k显示器才能根本解决问题。 ¥¥¥
+
+双显输出方面，实惠点的，用2个 Type C 转 HDMI 转接头，分别接 HDMI 显示器即可，缺点就是要插拔3根线。  
+如果有雷点3的扩展坞，要注意在M1 Mac并不原生支持双显（[原因分析](https://blog.sharpbai.com/2020/08/macos%E4%B8%BA%E4%BD%95%E4%BD%BF%E7%94%A8%E4%B8%8D%E4%BA%86%E5%8F%8C%E6%98%BE%E7%A4%BA%E8%BE%93%E5%87%BA%E7%9A%84%E9%9B%B7%E7%94%B53%E6%89%A9%E5%B1%95%E5%9D%9E/) ）。具体现象是，插2个DP，2个屏幕是镜像，而插HDMI就会频闪，有点像带宽不足。  
+但如果扩展坞上有雷电3的输出口，可以再外接一个Type C 转 HDMI 转接头连接第二显示器，以此解决问题，实现只插拔1根线，解决充电和双显输出。  
+![双显输出]({{ site.cdn_prefix }}assets/images/2022/01/28/mac-m1-dual-display.jpg)  
+(ThinkPad Thunderbolt 3 Dock Gen 2的雷电3扩展坞 40AN0135CN)
 
 ## 投屏
 笔记本多了个HDMI输出口，总体来说还是提高了易用性的。
