--- a/_posts/2022/2022-01-28-mac-m1.md
+++ b/_posts/2022/2022-01-28-mac-m1.md
@@ -1,36 +1,41 @@
 ---
 layout: post
-title:  "New Mac MBP M1Pro 14'"
+title:  "New Mac MBP M1 Pro 14'"
 tags: mac m1 node
 ---
-# New Mac MBP M1Pro 14' 使用体验
-![外观就这样]({{ site.cdn_prefix }}assets/images/2022/01/28/mbp-m1pro.jpg)
+# New Mac MBP M1 Pro 14' 使用体验
+公司这次因为项目需要，给配了台Mac。使用了一阵子，写个总结心得，给以后的同学提供些帮助。  
+
 ## 外观
-方方正正的没什么新意，有点土。  
-三个边的底部都有散热孔，手持时很硌手，不是很友好。
+![外观就这样]({{ site.cdn_prefix }}assets/images/2022/01/28/mbp-m1pro.jpg)  
+方方正正的没什么新意。去掉了Touch Bar。三个边的底部都有散热孔，手持时很硌手，不太舒服。  
 
 ## 接口  
-机器自带3个雷电(Type C), 1个HDMI。  
-建议配一个TypeC扩展坞，要包含HDMI（或DP），千兆网口，若干USB口，这样通过扩展坞连接键盘，网线，显示器，一根线搞定。
+机器自带3个雷电(Type C接口), 1个HDMI。  
+建议配一个Type C扩展坞，要包含HDMI（或DP），千兆网口，若干USB口，这样通过扩展坞连接键盘，网线，显示器，一根线搞定。
 一般这样的扩展坞还会有个Type C的取电口，这样电源线也可以省了，只是Apple配的是MagSafe磁吸线，只能自己权衡了。  
-推荐：绿联的50771，10919  
+推荐：绿联的50771，10919
 
 ## 外接显示器
 **效果**  
 在1080p的显示器上，效果不太好，字体模糊，明显不如Windows 10的显示输出效果。
 而且不用努力找软件方案了，因为软件无解。只有换4k显示器才能根本解决问题。 ¥¥¥  
-如果真的要买的话，可以看看:
-* 24' 优派VX2419 P3色域81% ¥2k
-* 27' 小米 P3色域99% ¥2.5k
-* 27' Dell U2720Q ¥3k
+
+我这次买了台新款Dell U2723QE 4k60Hz([京东](https://item.jd.com/10044414530485.html))，看中它自带全功能扩展坞，颜值高，参数也好。
 
 **双显**  
-如果有了扩展坞，那第二台显示器直接接在机器的HDMI口上就行了，缺点就是平时开会要插拔3根线：电源线，扩展坞，HDMI。
-如果你是完美主义，想一根线搞定，可以考虑下雷电3的扩展坞：  
-![双显输出]({{ site.cdn_prefix }}assets/images/2022/01/28/mac-m1-dual-display.jpg)  
-(不推荐，普遍要1k左右，没有性价比)  
-Note: Mac并不原生支持双显（[原因分析](https://blog.sharpbai.com/2020/08/macos%E4%B8%BA%E4%BD%95%E4%BD%BF%E7%94%A8%E4%B8%8D%E4%BA%86%E5%8F%8C%E6%98%BE%E7%A4%BA%E8%BE%93%E5%87%BA%E7%9A%84%E9%9B%B7%E7%94%B53%E6%89%A9%E5%B1%95%E5%9D%9E/) ）
-即便是雷电3扩展坞，也需要通过雷电3的接口再外接一个Type C 转 HDMI 转接头连接第二显示器。
+如果有Type C扩展坞，那第二台显示器直接接在机器自身的HDMI口上就行了。如果要说缺点，就是平时要插拔3根线：电源线，扩展坞，HDMI线。  
+
+也有办法能够一根线搞定，比如：
+1. 使用带[MST](https://www.dell.com/support/kbdoc/zh-cn/000128707/how-to-daisy-chain-multiple-monitors-using-displayport-multi-stream-transport-mst)功能的显示器，做菊花链，
+   并且其中一台支持Type C反向供电，给笔记本供电。
+   ![MST菊花链](https://supportkb.dell.com/img/ka02R000000krG2QAI/ka02R000000krG2QAI_zh_CN_2.jpeg)  
+   (可惜办公室现在的Dell P2317H不支持。不知道公司以后有没有可能升级4k显示器，哈哈)
+2. 雷电扩展坞：  
+   ![双显输出]({{ site.cdn_prefix }}assets/images/2022/01/28/mac-m1-dual-display.jpg)
+   不过不建议买这个，性价比很低，我这个是之前给ThinkPad用的。
+   Note: Mac并不原生支持双显([原因分析](https://blog.sharpbai.com/2020/08/macos%E4%B8%BA%E4%BD%95%E4%BD%BF%E7%94%A8%E4%B8%8D%E4%BA%86%E5%8F%8C%E6%98%BE%E7%A4%BA%E8%BE%93%E5%87%BA%E7%9A%84%E9%9B%B7%E7%94%B53%E6%89%A9%E5%B1%95%E5%9D%9E/))，
+   即便是雷电3扩展坞，也需要通过雷电3的接口再外接一个Type C 转 HDMI 转接头连接第二显示器。
 
 ## 投屏
 笔记本多了个HDMI输出口，总体来说还是提高了易用性的。
@@ -79,6 +84,5 @@ $ nvm alias default 12.16.1
 [这篇里的命令行说明更简洁](https://www.jurnalanas.com/node-js-mac-m1/)
 
 ### Android Studio
-我在Android Studio上跑模拟器一直连接不成功，提示Timeout。
+在M1芯片上跑Android模拟器，需要用v8a的rom。目前Phone有了，TV还是TBD。  
 Stackoverflow上有个[相关的帖子](https://stackoverflow.com/questions/64907154/android-studio-emulator-on-macos-with-arm-cpu-m1)
-但照着用了v8a的rom，仍然不行。而且TV端还没有v8a的rom。
