add author info

--- a/_posts/2022/2022-02-27-usb-type-c.md
+++ b/_posts/2022/2022-02-27-usb-type-c.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title:  "奇妙的Type-C"
-tags: usb type-c displayport dp
+tags: usb type-c displayport
+author_github: helloint
 ---
 # 奇妙的Type-C
 最近升级了显示器，买了Dell新出的U2723QE。这款显示器自称Hub Monitor。  
