feat: group post by categories

--- a/_posts/2022/2022-02-04-free-vpn.md
+++ b/_posts/2022/2022-02-04-free-vpn.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "免费的VPN推荐"
 tags: free vpn
+category: it
 ---
 ## Setup VPN
 下载地址：[Chrome 应用商店](https://chrome.google.com/webstore/detail/oofgbpoabipfcfjapgnbbjjaenockbdp)  
