--- a/_posts/2022/2022-02-27-usb-type-c.md
+++ b/_posts/2022/2022-02-27-usb-type-c.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 title:  "奇妙的Type-C"
-tags: usb type-c displayport
 author_github: helloint
+tags: usb type-c displayport
+category: it
 ---
 最近升级了显示器，买了Dell新出的U2723QE。这款显示器自称Hub Monitor。  
 ![背面丰富的接口]({{ site.cdn_prefix }}assets/images/2022/02/27/u2723qe.png)  
