--- a/_posts/2022/2022-01-28-mac-m1.md
+++ b/_posts/2022/2022-01-28-mac-m1.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "New Mac MBP M1 Pro 14' 使用体验"
 tags: mac m1 node
+category: it
 ---
 公司这次因为项目需要，给配了台Mac。使用了一阵子，写个总结心得，给以后的同学提供些帮助。  
 
